# Chisel-proof-of-concept

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  Main.cpp  chisel.rc  version.rc.in
src/application/: CMakeLists.txt  Chisel.cpp  Chisel.hpp
src/ui/: CMakeLists.txt  MainWindow.cpp  MainWindow.hpp  MainWindow.ui
src/ui/dialogs/: CMakeLists.txt  FaceEditDialog.cpp  FaceEditDialog.hpp  FaceEditDialog.ui  TextureBrowserDialog.cpp  TextureBrowserDialog.hpp  TextureBrowserDialog.ui
src/ui/dockpanels/: CMakeLists.txt  MapEditToolsSidebar.cpp  MapEditToolsSidebar.hpp  MapEditToolsSidebar.ui  NewObjectsDock.cpp  NewObjectsDock.hpp  NewObjectsDock.ui  TextureBrowserDock.cpp  TextureBrowserDock.hpp  TextureBrowserDock.ui  VisGroupsDock.cpp  VisGroupsDock.hpp  VisGroupsDock.ui
src/ui/optionsdialog/: CMakeLists.txt  OptionsDialog.cpp  OptionsDialog.hpp  OptionsDialog.ui  OptionsPage2DViews.cpp  OptionsPage2DViews.hpp  OptionsPage2DViews.ui  OptionsPage3DViews.cpp  OptionsPage3DViews.hpp  OptionsPage3DViews.ui  OptionsPageBuildPrograms.cpp  OptionsPageBuildPrograms.hpp  OptionsPageBuildPrograms.ui  OptionsPageGameConfigurations.cpp  OptionsPageGameConfigurations.hpp  OptionsPageGameConfigurations.ui  OptionsPageGeneral.cpp  OptionsPageGeneral.hpp  OptionsPageGeneral.ui  OptionsPageTextures.cpp  OptionsPageTextures.hpp  OptionsPageTextures.ui
src/ui/viewports/: CMakeLists.txt  TextureBrowserViewport.cpp  TextureBrowserViewport.hpp  Viewport3DWindow.cpp  Viewport3DWindow.hpp  ViewportFourWayWindow.cpp  ViewportFourWayWindow.hpp
